# dev

- n/a

### 1.0.4

- Repeat watchers in LibeventReactor internally were handled in
  microsecond intervals instead of milliseconds.

### 1.0.3

- Fix issue in NativeReactor capable of causing keep alive
  counter corruption when a watcher was cancelled inside its
  own callback.
- Fix issue in UvReactor with libuv >= 1.1.0 causing busy loop
  with immediates present, but no watchers being triggered.

### 1.0.2

- Fix PHP7 issue in which top-level Throwables weren't caught
  in certain coroutine contexts.
- Remove error suppression operater on optionally null option
  assignment to avoid spurious E_NOTICE output when custom
  error handlers are used.

### 1.0.1

- Fix bug preventing UvReactor::tick() from returning when no
  events are ready for a single active IO watcher.

1.0.0
-----

- Initial stable API release