@@ -1,0 +1,7 @@
+<?php
+
+namespace Amp;
+
+class CombinatorException extends \RuntimeException {
+
+}
